--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install dependencies
-      run: npm install
+      run: npm --prefix rdicidr-0.1.0/package.json  install
     - name: Linter (ESLint)
       run: npm run lint
     - name: Formatter (Prettier)
