--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: npm --prefix rdicidr-0.1.0/package.json  install --version 7.15.0
     - name: Linter (ESLint)
-      run: npm lint --prefix package.json
+      run: npm --prefix package.json lint
     - name: Formatter (Prettier)
       run: npm prettier --prefix package.json
     - name: Test (Jest)
