--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,8 +20,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: npm --prefix rdicidr-0.1.0/package.json  install --version 7.15.0
-    - name: Linter (ESLint)
-      run: npm --prefix package.json lint
+    #: Linter (ESLint)
+     # run: npm --prefix package.json lint
     - name: Formatter (Prettier)
       run: npm prettier --prefix package.json
     - name: Test (Jest)
