--- a/.github/workflows/PreReq.yml
+++ b/.github/workflows/PreReq.yml
@@ -20,10 +20,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: npm --prefix rdicidr-0.1.0/package.json  install --version 7.15.0
-    #: Linter (ESLint)
-     # run: npm --prefix package.json lint
-   # - name: Formatter (Prettier)
-    #  run: npm prettier --prefix package.json
+    - name: Linter (ESLint)
+      run: npm --prefix package.json lint
+    - name: Formatter (Prettier)
+      run: npm prettier --prefix package.json
     - name: Test (Jest)
       run: npm test --prefix package.json
       env:
