--- a/.github/workflows/PreReq.yml
+++ b/.github/workflows/PreReq.yml
@@ -21,11 +21,11 @@ jobs:
     - name: Install dependencies
       run: npm --prefix rdicidr-0.1.0/package.json  install --version 7.15.0
     - name: Linter (ESLint)
-      run: npm --prefix package.json lint
+      run: npm  run lint --prefix package.json
     - name: Formatter (Prettier)
-      run: npm prettier --prefix package.json
+      run: npm run prettier --prefix package.json
     - name: Test (Jest)
-      run: npm test --prefix package.json
+      run: npm run test --prefix package.json
       env:
         CI: true
     - name: Build
